Más refactorizaciones (falta por trasladar metodos al mediador)